# fastapi-social_nw

./: .env.example  .pre-commit-config.yaml  _.pre-commit-config.yaml  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 2023_08_20_2031-1d647261e101_initial.py  2023_08_21_1424-5e039efc3b86_.py  2023_08_22_2351-2bdb9b423c2b_.py
src/: __models__.py  app.py  config.py  database.py  logging.py  main.py  middlewares.py  routers.py
src/auth/: auth_jwt.py  config.py  dependencies.py  exceptions.py  models.py  routers.py  schemas.py  services.py
src/base/: dependencies.py  exceptions.py  models.py  paginations.py  repositories.py  schemas.py
src/chats/: dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/users/: dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
